# SpeechTranslator

app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  whisper_bridge.cpp
